force-app/main/default/objects/Start_Dates__c/Start_Dates__c.object-meta.xml
<CustomObject>
    <description>This Object is Mainly used for integration of start date project to salesforce as we need start date for course start date in apttus</description>
    <label>Start Dates</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StartDates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>