force-app/main/default/objects/Start_Dates__c/fields/APTSBreak1EndDate__c.field-meta.xml
<CustomField>
    <fullName>APTSBreak1EndDate__c</fullName>
    <label>Break-1 End Date</label>
    <type>Date</type>
</CustomField>