force-app/main/default/objects/Start_Dates__c/fields/APTSBreak1NumberofWeeks__c.field-meta.xml
<CustomField>
    <fullName>APTSBreak1NumberofWeeks__c</fullName>
    <formula>ROUND(( APTSBreak1EndDate__c -  APTSBreak1StartDate__c )/7, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break-1 Number of Weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>