force-app/main/default/objects/Start_Dates__c/fields/APTSBreak1StartDate__c.field-meta.xml
<CustomField>
    <fullName>APTSBreak1StartDate__c</fullName>
    <label>Break-1 Start Date</label>
    <type>Date</type>
</CustomField>