force-app/main/default/objects/Start_Dates__c/fields/APTSBreak2EndDate__c.field-meta.xml
<CustomField>
    <fullName>APTSBreak2EndDate__c</fullName>
    <label>Break-2 End Date</label>
    <type>Date</type>
</CustomField>