force-app/main/default/objects/Start_Dates__c/fields/APTSBreak2NumberofWeeks__c.field-meta.xml
<CustomField>
    <fullName>APTSBreak2NumberofWeeks__c</fullName>
    <formula>ROUND(( APTSBreak2EndDate__c -  APTSBreak2StartDate__c )/7, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break-2 Number of Weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>