force-app/main/default/objects/Start_Dates__c/fields/APTSBreak2StartDate__c.field-meta.xml
<CustomField>
    <fullName>APTSBreak2StartDate__c</fullName>
    <label>Break-2 Start Date</label>
    <type>Date</type>
</CustomField>