force-app/main/default/objects/Start_Dates__c/fields/APTSBreak3EndDate__c.field-meta.xml
<CustomField>
    <fullName>APTSBreak3EndDate__c</fullName>
    <label>Break-3 End Date</label>
    <type>Date</type>
</CustomField>