force-app/main/default/objects/Start_Dates__c/fields/APTSBreak3NumberofWeeks__c.field-meta.xml
<CustomField>
    <fullName>APTSBreak3NumberofWeeks__c</fullName>
    <formula>ROUND(( APTSBreak3EndDate__c -  APTSBreak3StartDate__c )/7, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break-3 Number of Weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>