force-app/main/default/objects/Start_Dates__c/fields/APTSBreak3StartDate__c.field-meta.xml
<CustomField>
    <fullName>APTSBreak3StartDate__c</fullName>
    <label>Break-3 Start Date</label>
    <type>Date</type>
</CustomField>