force-app/main/default/objects/Start_Dates__c/fields/APTSCourseNumberofWeeks__c.field-meta.xml
<CustomField>
    <fullName>APTSCourseNumberofWeeks__c</fullName>
    <formula>ROUND((APTSEndDate__c - StartDate__c)/7,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Number of Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>