force-app/main/default/objects/Start_Dates__c/fields/APTSEndDate__c.field-meta.xml
<CustomField>
    <fullName>APTSEndDate__c</fullName>
    <description>Necessary for AY to calculate the course number of weeks</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>