force-app/main/default/objects/Start_Dates__c/fields/APTSTerm1EndDate__c.field-meta.xml
<CustomField>
    <fullName>APTSTerm1EndDate__c</fullName>
    <label>Term-1 End Date</label>
    <type>Date</type>
</CustomField>