force-app/main/default/objects/Start_Dates__c/fields/APTSTerm1NumberofWeeks__c.field-meta.xml
<CustomField>
    <fullName>APTSTerm1NumberofWeeks__c</fullName>
    <formula>ROUND(( APTSTerm1EndDate__c -  APTSTerm1StartDate__c )/7, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term-1 Number of Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>