force-app/main/default/objects/Start_Dates__c/fields/APTSTerm1StartDate__c.field-meta.xml
<CustomField>
    <fullName>APTSTerm1StartDate__c</fullName>
    <label>Term-1 Start Date</label>
    <type>Date</type>
</CustomField>