force-app/main/default/objects/Start_Dates__c/fields/APTSTerm2EndDate__c.field-meta.xml
<CustomField>
    <fullName>APTSTerm2EndDate__c</fullName>
    <label>Term-2 End Date</label>
    <type>Date</type>
</CustomField>