force-app/main/default/objects/Start_Dates__c/fields/APTSTerm2NumberofWeeks__c.field-meta.xml
<CustomField>
    <fullName>APTSTerm2NumberofWeeks__c</fullName>
    <formula>ROUND(( APTSTerm2EndDate__c -  APTSTerm2StartDate__c )/7, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term-2 Number of Weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>