force-app/main/default/objects/Start_Dates__c/fields/APTSTerm2StartDate__c.field-meta.xml
<CustomField>
    <fullName>APTSTerm2StartDate__c</fullName>
    <label>Term-2 Start Date</label>
    <type>Date</type>
</CustomField>