force-app/main/default/objects/Start_Dates__c/fields/APTSTerm3EndDate__c.field-meta.xml
<CustomField>
    <fullName>APTSTerm3EndDate__c</fullName>
    <label>Term-3 End Date</label>
    <type>Date</type>
</CustomField>