force-app/main/default/objects/Start_Dates__c/fields/APTSTerm3NumberofWeeks__c.field-meta.xml
<CustomField>
    <fullName>APTSTerm3NumberofWeeks__c</fullName>
    <formula>ROUND(( APTSTerm3EndDate__c -  APTSTerm3StartDate__c )/7, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term-3 Number of Weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>