force-app/main/default/objects/Start_Dates__c/fields/APTSTerm3StartDate__c.field-meta.xml
<CustomField>
    <fullName>APTSTerm3StartDate__c</fullName>
    <label>Term-3 Start Date</label>
    <type>Date</type>
</CustomField>