force-app/main/default/objects/Start_Dates__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <description>This field will store all the course values</description>
    <label>Course</label>
    <length>100</length>
    <type>Text</type>
</CustomField>