force-app/main/default/objects/Start_Dates__c/fields/DateofBirthFrom__c.field-meta.xml
<CustomField>
    <fullName>DateofBirthFrom__c</fullName>
    <description>This field will capture Date of birth from field</description>
    <label>Date of Birth From</label>
    <type>Date</type>
</CustomField>