force-app/main/default/objects/Start_Dates__c/fields/DateofBirthTo__c.field-meta.xml
<CustomField>
    <fullName>DateofBirthTo__c</fullName>
    <description>This field will store the value of Date of Birth To</description>
    <label>Date of Birth To</label>
    <type>Date</type>
</CustomField>