force-app/main/default/objects/Start_Dates__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <description>This field will store the destination values</description>
    <label>Destination</label>
    <length>100</length>
    <type>Text</type>
</CustomField>