force-app/main/default/objects/Start_Dates__c/fields/Is_Beginner__c.field-meta.xml
<CustomField>
    <fullName>Is_Beginner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will store the value weather the course is beginner or not</description>
    <label>Is Beginner</label>
    <type>Checkbox</type>
</CustomField>