force-app/main/default/objects/Start_Dates__c/fields/Is_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Is_Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This filed will store preferred preferences</description>
    <label>Is Preferred</label>
    <type>Checkbox</type>
</CustomField>