force-app/main/default/objects/Start_Dates__c/fields/Preferred__c.field-meta.xml
<CustomField>
    <fullName>Preferred__c</fullName>
    <formula>IF(Is_Preferred__c  = TRUE,IMAGE("/servlet/servlet.FileDownload?file=01526000000HIgj", "greendot"),IMAGE("/servlet/servlet.FileDownload?file=01526000000HIgf", "reddot") )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred</label>
    <type>Text</type>
</CustomField>