force-app/main/default/objects/Start_Dates__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>we need to make sure that start dates are saved based on program (CAT has confirmed that they have this info).</description>
    <label>Program</label>
    <length>20</length>
    <type>Text</type>
</CustomField>