force-app/main/default/objects/Start_Dates__c/fields/Start_Date_Converted__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Converted__c</fullName>
    <formula>TEXT(DAY( StartDate__c )) &amp; '/' &amp; TEXT(MONTH(StartDate__c)) &amp;'/'&amp; TEXT(YEAR(StartDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Converted</label>
    <type>Text</type>
</CustomField>