force-app/main/default/objects/Start_Dates__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>This field will store the start date values</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>