force-app/main/default/objects/Start_Dates__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Program__c</columns>
    <columns>Destination__c</columns>
    <columns>Is_Beginner__c</columns>
    <columns>Is_Preferred__c</columns>
    <columns>StartDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>ILSU</value>
    </filters>
    <label>All</label>
</ListView>